# airflow-playground

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
airflow/: rbac.yaml
dags/: clickhouse_demo.py  foobar.py
dags/my_generator/: dag_generator.py  io.py  pipeline_config_schema.py
dags/my_generator/pipeline_configs/: 1.yaml
dags/my_generator/pipeline_configs/dummy/: 2.yaml
mysql/: values.yaml
scripts/: down.sh  freeze.sh  kubectl_run.awk  run.sh  test-run.sh  up.sh  update.sh
tests/: conftest.py  test_dags.py  test_pipeline_configs.py
