[project]
name = "airflow-playground"
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "airflow-clickhouse-plugin==0.10.0",
    "PyMySQL",
    "apache-airflow[crypto,kubernetes]>=2.5.1",
    "pyyaml>=6.0",
    "schema>=0.7.5",
    "croniter>=1.3.5",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "pytest>=7.1.2",
]
[tool.pdm.scripts]
test = "pytest -v tests"
freeze = "./scripts/freeze.sh"